Support package manifest
